revert test to constant